# anywhere-sdr

./: CLAUDE.md  Cargo.toml  libdoc.md
apps/gps_simulator/: Cargo.toml
apps/gps_simulator/src/: app.rs  main.rs  simulation.rs
crates/gps/src/generator/: signal_generator.rs
