[workspace.package]
version = "0.0.3"
edition = "2024"
authors = ["Lao Lilin <lll9p.china@gmail.com>"]
description = """
A software-defined GPS signal simulator written in Rust, inspired by gps-sdr-sim.
Generates GPS L1 C/A signals that can be transmitted through SDR devices.
"""
documentation = "https://github.com/lll9p/anywhere-sdr"
homepage = "https://github.com/lll9p/anywhere-sdr"
repository = "https://github.com/lll9p/anywhere-sdr"
keywords = ["sdr", "simulation", "gps", "gnss", "hackrf"]
categories = ["science", "simulation", "hardware-support"]
license = "MIT"
readme = "README.md"
exclude = ["/.github/", "resources/gpssim.c", "output/"]

[workspace]
resolver = "2"
members = ["crates/*", "apps/gpssim", "apps/gps_simulator"]
exclude = ["target", "dist"]


[workspace.dependencies]
# Internal dependencies - workspace crates
constants = { path = "./crates/constants" }
geometry = { path = "./crates/geometry" }
gps = { path = "./crates/gps" }
libhackrf = { path = "./crates/libhackrf" }
parsing = { path = "./crates/parsing" }
rinex = { path = "./crates/rinex" }

# Command line argument parsing
clap = { version = "4.5", features = ["derive", "unicode", "wrap_help", "env"] }

# Data processing and parsing
csv = { version = "1.4" }
jiff = { version = "0.2" }
pest = { version = "2.8" }
pest_derive = { version = "2.8" }

# Hardware support
nusb = { version = "0.2" }
futures-lite = { version = "2.6" }

# Concurrency and performance
rayon = { version = "1.8" }

# Error handling
thiserror = { version = "2.0" }

# Logging and diagnostics
log = { version = "0.4" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }

# Testing
test-case = { version = "3.3" }

[workspace.lints.clippy]
# Enabled lints
pedantic = { level = "deny", priority = -1 }
style = { level = "deny", priority = 1 }
dbg_macro = "deny"
todo = "deny"
doc_markdown = "warn"
missing_docs_in_private_items = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Allowed lints - code style preferences
blocks_in_conditions = "allow"
items-after-statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no-effect-underscore-binding = "allow"
return_self_not_must_use = "allow"
struct-excessive-bools = "allow"
needless_pass_by_value = "allow"

# Allowed lints - GPS signal processing specific
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
many_single_char_names = "allow"
cast_possible_wrap = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
similar_names = "allow"
used_underscore_binding = "allow"

[workspace.lints.rust]
# missing_docs = "warn"
# unsafe_code = "warn"
# unused_crate_dependencies = "warn"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = 3
debug = false

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 2
debug = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = false
